src/Presentation/Nop.Web/Themes/eshopper/Content/css/main.css
/* ... */
.response-area .media {
    border: 1px solid #F7F7F0;
    padding: 18px 18px 18px 0;
    margin-bottom: 27px;
}

    .response-area .media img {
        height: 102px;
        width: 100%;
    }

    .response-area .media .pull-left {
        margin-right: 25px;
    }

.response-area .second-media {
    margin-left: 5%;
    width: 95%;
}


.sinlge-post-meta {
    overflow: hidden;
    padding-left: 0;
    margin-bottom: 15px;
}



    .sinlge-post-meta li {
        background: #F0F0E9;
        color: #363432;
        float: left;
        font-size: 10px;
        font-weight: 700;
        margin-right: 10px;
        padding: 0 10px 0 0;
        position: relative;
        text-transform: uppercase;
    }

        .sinlge-post-meta li i {
            color: #FFFFFF;
            margin-right: 10px;
            padding: 8px 10px;
        }

            .sinlge-post-meta li i:after {
                top: 7px;
                border-width: 6px;
                left: 27px;
            }


.replay-box {
    margin-bottom: 10px;
    margin-top: 15px;
}

    .replay-box h2 {
        font-weight: 700;
        font-size: 20px;
        color: #363432;
        margin-top: 0;
        margin-bottom: 45px;
    }

    .replay-box label {
        color: #FFFFFF;
        margin-bottom: 5px;
        margin-left: 15px;
        padding: 3px 15px;
        float: left;
        font-weight: 400;
    }

    .replay-box span {
        float: right;
        font-weight: 700;
        margin-top: 5px;
    }

    .replay-box form input {
        border: 1px solid #F7F7F0;
        color: #ADB2B2;
        font-size: 12px;
        margin-bottom: 5px;
        padding: 8px;
        width: 100%;
    }

        .replay-box form input:hover,
        .text-area textarea:hover {
        }

.text-area {
    margin-top: 66px;
}

    .text-area textarea {
        background: transparent;
        border: 1px solid#F7F7F0;
    }

.btn.btn-primary {
    border-radius: 0;
    margin-top: 16px;
}

.blank-arrow {
    position: relative;
}

    .blank-arrow label:after {
        content: "";
        position: absolute;
        width: auto;
        height: auto;
        border-style: solid;
        border-width: 8px;
        top: 25px;
        left: 5px;
    }



/*************************
******* Contact CSS ********
**************************/

.contact-map {
    width: 100%;
    height: 385px;
    margin-bottom: 70px;
}

.contact-info .heading,
.contact-form .heading {
    text-transform: capitalize;
}

.contact-form .form-group {
    margin-bottom: 20px;
}

#contact-page .form-control::-moz-placeholder {
    color: #8D8D8D;
}

#contact-page .form-control {
    background-color: #fff;
    border: 1px solid #ddd;
    color: #696763;
    height: 46px;
    padding: 6px 12px;
    width: 100%;
    font-size: 16px;
    border-radius: 4px;
    box-shadow: inherit;
}

#contact-page #message {
    height: 160px;
    resize: none;
}

#main-contact-form .btn-primary {
    margin-bottom: 15px;
    margin-top: 20px;
}


#contact-page .form-control:focus,
#contact-page .form-control:hover {
    box-shadow: inherit;
}

#contact-page .contact-info {
    padding: 0 20px;
}

    #contact-page .contact-info address {
        margin-bottom: 40px;
        margin-top: -5px;
    }

    #contact-page .contact-info p {
        margin-bottom: 0;
        color: #696763;
        font-size: 16px;
        line-height: 25px;
    }

.social-networks {
    overflow: hidden;
    text-align: center;
}

    .social-networks ul {
        margin-top: -5px;
        padding: 0;
        display: inline-block;
    }

        .social-networks ul li {
            float: left;
            text-decoration: none;
            list-style: none;
            margin-right: 20px;
        }

            .social-networks ul li:last-child {
                margin-right: 0;
            }

            .social-networks ul li a {
                color: #999;
                font-size: 25px;
            }

.contact-info .social-networks ul li a i {
    background: none;
}

.contact-info .social-networks ul li a:hover {
}






/*------------------------------------*\
  General view START
\*------------------------------------*/
a.logo {
    display: block;
    height: 39px;
    text-decoration: none;
    width: 139px;
}

a {
    color: #696763;
}

    a:hover {
        text-decoration: none;
    }

.custom-side-box-div {
    border: 1px solid #F7F7F0;
    padding: 15px;
    margin-bottom: 35px;
}

.custom-page-box-div {
    border: 1px solid #F7F7F0;
    padding: 15px;
    margin: 0px 15px 35px 15px;
}
@media (max-width: 767px) {
    .custom-page-box-div {
        margin-left: 0;
        margin-right: 0;
        text-align: center;
    }
}
.custom-page-box-border-less-div {
    margin: 0px 15px 35px 15px;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.space15px {
    margin-bottom: 15px;
}

.square-box {
    border-radius: 0px;
}

label {
    font-weight: 400;
}


/*------------------------------------*\
  General view End
\*------------------------------------*/

/*------------------------------------*\
  Page: Notification START
\*------------------------------------*/



.bar-notification {
  position: fixed;
  height: 40px;
  width: 100%;
  top: 0px;
  left: 0;
  color: #FFF; /*background: #000;*/
  -moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
  -webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
  box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
  z-index: 99;
}

  .bar-notification.error {
    background: #8A0707;
  }

  .bar-notification.success {
    background: #092E20;
  }

  .bar-notification p {
    text-align: center;
    padding: 10px 0;
  }

  .bar-notification .close {
    background: url(images/ico-close-notification-bar.png) no-repeat;
    width: 20px;
    height: 20px;
    cursor: pointer;
    margin: 10px 20px;
  }

  .bar-notification a {
    text-decoration: none;
    color: #FFF;
  }
/* ... */

